# pulseon

./: .gitignore  .ignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  skills-lock.json
.github/workflows/: CI.yml  checks.yml  ci.yml  release-gates.yml
crates/pulseon-chart-core/: Cargo.toml
crates/pulseon-chart-core/src/: downsample.rs  interaction.rs  lib.rs
crates/pulseon-core/: Cargo.toml
crates/pulseon-core/src/: config.rs  ducklake_test_support.rs  lib.rs  native_engine_behavior.rs
crates/pulseon-core/src/engine/: client.rs  comparison.rs  mod.rs  query.rs  ranking.rs  reporting.rs  time.rs  write.rs
crates/pulseon-core/src/model/: metric.rs  mod.rs
crates/pulseon-core/src/sdk/: arrow.rs  mod.rs
crates/pulseon-data/: Cargo.toml
crates/pulseon-data/src/: lib.rs  query.rs  schema.rs
crates/pulseon-model/: Cargo.toml
crates/pulseon-model/src/: alignment.rs  comparison.rs  lib.rs  metric.rs  run.rs  types.rs
crates/pulseon-python/: Cargo.toml
crates/pulseon-python/src/: lib.rs
crates/pulseon-python/src/sdk/: alignment.rs  arrow.rs  client.rs  comparison.rs  mod.rs
crates/pulseon-storage/: Cargo.toml
crates/pulseon-storage/src/: alignment_query.rs  bootstrap.rs  config.rs  lib.rs  lock.rs  metric_query.rs  project.rs  query.rs  rows.rs  schema.rs  sql.rs  time.rs  write.rs
crates/pulseon-viewer/: Cargo.toml
crates/pulseon-viewer/src/: core.rs  desktop.rs  lib.rs  main.rs  model.rs  query.rs  source.rs  worker.rs
crates/pulseon-viewer/src/desktop/: renderer.rs
crates/pulseon-viewer/tests/: large_series_validation.rs  phase3b.rs
docs/: README.md  ROADMAP.md  TODO.md  benchmark-report-2026-07-10.md  benchmark-report.md  catalog-application-tables.md  catalog-data-boundary.md  comparison-semantics.md  crate-boundaries.md  glossary.md  impl-phase-0-scaffold.md  minio-query-baseline-2026-07-13.md  native-architecture.md  native-storage-boundary.md  parquet-schema-contract.md  phase3-gpui-curve-viewer.md  stable-compatibility.md  v1-native-architecture.md  v1-parquet-schema-contract.md  viewer-performance-validation.md
docs/adr/: 0001-v1-product-scope.md  0002-native-storage-boundary.md  0003-v1-metric-model.md  0004-non-blocking-metric-reporting.md  0005-async-metric-reporting-admission.md  0006-v2-native-storage-options.md  0007-v2-logical-schema-and-parquet-layout.md  0008-v3-catalog-backend-portability.md  0009-v4-s3-data-path.md  0010-headless-read-surface.md  0011-desktop-first-curve-viewer.md  0011-stable-compatibility-contract.md  0012-defer-remote-training.md  0013-separate-model-storage-core-and-python.md
docs/drafts/: autoresearch-control-loop-notes.md  gpui-curve-viewer-spike.md  multi-project-analysis-workbench.md  remote-training-architecture-notes.md
docs/reference/: ducklake-archive.md  training-metrics-hosting-boundaries.md  training-metrics-storage-architecture.md
docs/release-notes/: 0.1.0.md  0.1.0a1.md  0.1.0a2.md  0.1.0a3.md  0.1.0a4.md  0.1.0a5.md  0.1.0rc1.md  0.1.1.md
python/pulseon/: __init__.py  _pulseon.pyi  cli.py
scripts/: bench_log_persistence.py  bench_log_throughput.py  bench_minio_metric_query.py  rc_lttb_validation.py  wheel_smoke.py
src/: ducklake_probe.rs  ducklake_test_support.rs  lib.rs  native_engine_behavior.rs
src/catalog/: cloud_impl.rs  ducklake_impl.rs  mod.rs  trait_def.rs  types.rs
src/compute/: cloud_impl.rs  duckdb_impl.rs  mod.rs  query_interface.rs  trait_def.rs
src/engine/: bootstrap.rs  client.rs  flush.rs  mod.rs  query.rs  reporting.rs  write.rs  write_rows.rs
src/model/: mod.rs  run.rs  types.rs
src/sdk/: arrow.rs  client.rs  config.rs  mod.rs  query.rs  run.rs
src/storage/: ducklake_bridge.rs  local.rs  mod.rs  s3.rs  trait_def.rs
tests/: helpers.py  test_catalog_backend_parity.py  test_cli.py  test_comparison_queries.py  test_helpers.py  test_import.py  test_init.py  test_metric_logging.py  test_metric_queries.py  test_minio_acceptance.py  test_minio_query_benchmark.py  test_sdk_diagnostics.py  test_sdk_errors.py  test_sdk_lifecycle.py  test_sum.py  typing_contracts.py
tests/typecheck/: test_arrow_tables.py  test_catalog_backend_literals.py  test_comparison_api.py
