[package]
name = "pulseon"
version = "0.1.0"
edition = "2024"

[lib]
name = "pulseon"
crate-type = ["cdylib"]

[dependencies]
# Python binding
pyo3 = { version = "0.29", features = ["extension-module"] }
pyo3-arrow = "0.19"

# DuckDB (embedded) — version encoding 1.MAJOR_MINOR_PATCH.x → DuckDB v1.5.4
# "bundled": compile DuckDB C++ from source (maturin wheel distribution)
# "loadable-extension": enable runtime LOAD for ducklake/lttb/httpfs extensions
duckdb = { version = "~1.10504.0", features = ["bundled", "loadable-extension"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"
# anyhow = "1.0"  # add in Phase 4 for mixed-error ? in engine orchestration

# Serialization (config, summary JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs and timestamps
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["native"]
native = []

[profile.release]
strip = true
