[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "pulseon"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = ["maturin"]
testing-extra = [
    { include-group = "dev" },
    "pytest",
]
linting = [
    { include-group = "dev" },
    "pyright",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
config-settings = { build-args = '--profile=dev' }

[tool.maturin]
python-source = "python"
module-name = "pulseon._pulseon"

[tool.maturin.generate-ci.github]
trusted-publishing = true
# Optional: name of the GitHub Actions environment to use for the release job
publishing-environment = "release"

[tool.pyright]
include = ["python"]
reportUnnecessaryTypeIgnoreComment = true
