[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "pulseon"
description = "Local-first training metrics tracker backed by Rust, PyO3, DuckDB, and DuckLake."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "PulseOn contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.scripts]
pulseon = "pulseon.cli:main"

[project.urls]
Homepage = "https://github.com/reformovo/pulseon"
Repository = "https://github.com/reformovo/pulseon"
Issues = "https://github.com/reformovo/pulseon/issues"
Documentation = "https://github.com/reformovo/pulseon#readme"

[dependency-groups]
dev = ["maturin"]
testing-extra = [
    { include-group = "dev" },
    "pytest",
]
linting = [
    { include-group = "dev" },
    "pyright",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    {file = "pyproject.toml"},
    {file = "Cargo.toml"},
    {file = "crates/*/Cargo.toml"},
    {file = "**/*.rs"},
]
# Uncomment to build rust code in development mode
config-settings = { build-args = '--profile=dev' }

[tool.maturin]
manifest-path = "crates/pulseon-core/Cargo.toml"
include = [{ path = ".cargo/config.toml", format = "sdist" }]
python-source = "python"
module-name = "pulseon._pulseon"
bindings = "pyo3"

[tool.maturin.generate-ci.github]
trusted-publishing = true
# Optional: name of the GitHub Actions environment to use for the release job
publishing-environment = "release"

[tool.pyright]
include = ["python", "tests/typecheck"]
reportUnnecessaryTypeIgnoreComment = true
