[package]
name = "pulseon-core"
version = "0.1.1"
edition = "2024"
description = "Application orchestration for PulseOn clients and runs."
license = "MIT"
repository = "https://github.com/reformovo/pulseon"
readme = "../../README.md"

[lib]
name = "pulseon_core"

[dependencies]
pulseon-model = { path = "../pulseon-model" }
pulseon-storage = { path = "../pulseon-storage" }

# Error handling
thiserror = "2"

# IDs and timestamps
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
duckdb = { version = "~1.10504.0", features = ["bundled"] }

[features]
default = ["native"]
native = []
