[package]
name = "pulseon-data"
version = "0.1.0"
edition = "2024"
description = "DuckDB and Parquet data access for PulseOn viewers."
license = "MIT"
repository = "https://github.com/reformovo/pulseon"

[dependencies]
duckdb = { version = "~1.10504.0", features = ["bundled"] }

[lib]
name = "pulseon_data"
path = "src/lib.rs"
