[package]
name = "pulseon-python"
version = "0.1.1"
edition = "2024"
description = "Python extension bindings for PulseOn."
license = "MIT"
repository = "https://github.com/reformovo/pulseon"
readme = "../../README.md"

[lib]
name = "pulseon"
crate-type = ["cdylib"]

[dependencies]
arrow = "58.3.0"
pulseon-core = { path = "../pulseon-core" }
pyo3 = { version = "0.29", features = ["abi3-py311"] }
thiserror = "2"

[dev-dependencies]
chrono = "0.4"
