[package]
name = "pulseon-storage"
version = "0.1.0"
edition = "2024"
description = "Native project and Parquet storage for PulseOn."
license = "MIT"
repository = "https://github.com/reformovo/pulseon"

[dependencies]
chrono = "0.4"
duckdb = { version = "~1.10504.0", features = ["bundled"] }
pulseon-model = { path = "../pulseon-model" }
thiserror = "2"
toml = "1.1.2"
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "pulseon_storage"
path = "src/lib.rs"
