[package]
name = "pulseon-viewer"
version = "0.1.0"
edition = "2024"
description = "Native desktop curve viewer for PulseOn."
license = "MIT"
repository = "https://github.com/reformovo/pulseon"

[features]
default = ["desktop"]
desktop = ["dep:gpui"]
test-support = ["desktop", "gpui/test-support"]

[dependencies]
pulseon-chart-core = { path = "../pulseon-chart-core" }
pulseon-core = { path = "../pulseon-core" }
pulseon-model = { path = "../pulseon-model" }
pulseon-storage = { path = "../pulseon-storage" }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "=0.2.2", default-features = false, features = ["font-kit"], optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "pulseon_viewer"
path = "src/lib.rs"

[[bin]]
name = "pulseon-viewer"
path = "src/main.rs"
